cmake_minimum_required(VERSION 3.15)
project(Preguntados)

set(CMAKE_CXX_STANDARD 17)



add_executable(Preguntados main.cpp Pregunta.cpp Pregunta.h ListaPregunta.cpp ListaPregunta.h PilaPregunta.cpp PilaPregunta.h ColaPregunta.cpp ColaPregunta.h Jugador.cpp Jugador.h ListaJugador.cpp ListaJugador.h)